# mathjoy

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.org
examples/: test_input.txt  test_input2.txt
include/: FEM_2dim.hpp  FVM_2dim.hpp  finite_element_method.hpp  quadrature.hpp  testing_functions.hpp
include/delaunay-triangulation/: delaunay.h  edge.h  numeric.h  triangle.h  vector2.h
include/math/: math.hpp
include/matrix_solver/: cholesky.hpp  gaussian_elimination.hpp
include/mesh_generator/: edge.hpp  face.hpp  mesh_generator.hpp  vertex.hpp
include/miscellaneous/: sieve.hpp
include/solver/: iterative_solve.hpp  matrix_solve.hpp
include/sort/: sort.hpp
include/utils/: matrix_io.hpp  utils.hpp  utils_function.hpp  utils_impl.hpp
src/: FEM_2dim.cpp  FEM_2dim_triangular.cpp  FEM_general.cpp  FEM_linear.cpp  FVM_2dim.cpp  matrix_io.cpp  quadrature.cpp
src/benchmark/: miscellaneous.cpp
src/mesh_generator/: mesh_generator.cpp
src/test/: main.cpp  main_linear.cpp  test.cpp  test_FVM.cpp  test_delaunay.cpp
src/utils/: utils_function.cpp
test/: test_running.cpp
